[package]
name = "ndt7-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "An ndt7 speed test client library and CLI"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/michalskalski/ndt7-client"
keywords = ["ndt7", "speedtest", "network", "bandwidth"]
categories = ["network-programming"]

[[bin]]
name = "ndt7-client"
path = "src/bin/ndt7_client.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"
futures-util = "0.3"
webpki-roots = "1"
rustls = "0.23"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
bytes = "1.11.1"
